2006-12-16  Chris Taylor  <chris@icculus.org>

	* arch/carbon/conf.h: allow universal binaries to be built using
	Xcode 2.2 or later

2006-12-13  Chris Taylor  <chris@icculus.org>

	* texmap/tmapflat.c: divide negative window x-coordinates properly,
	fixing random crashes

2006-12-03  Chris Taylor  <chris@icculus.org>

	* texmap/tmapppro.S: fix assemble error for gas (fix bug #2312)

	* misc/Makefile.am: add main as an include path for strutil.c,
	should have done this on 2006-02-26

2006-12-02  Chris Taylor  <chris@icculus.org>

	* texmap/scanline.c: divide negative light rates of change
	properly (fix bug #2575)

2006-12-01  Chris Taylor  <chris@icculus.org>

	* main/weapon.c: only autoselect a secondary weapon if the player
	didn't have any of that type before (fix bug #2671)

2006-11-30  Chris Taylor  <chris@icculus.org>

	* arch/ogl/ogl.c: avoid loading OpenGL textures before they have
	been paged in, bug found by loading Abalyon 5

2006-11-26  Chris Taylor  <chris@icculus.org>

	* main/game.c, main/gamerend.c: small brace tidy up to allow
	a source code editor to list all the functions

	* arch/ogl/gr.c: fix screenshot corruption, use PhysicsFS to check
	for existing screenshots

2006-07-29  Chris Taylor  <chris@icculus.org>

	* main/inferno.c, main/titles.c, main/titles.h:
	move titles, loading screen and order form showing to titles.c

	* include/physfsx.h, main/inferno.c: move PhysicsFS
	initialisation, search path setup and argument reading to physfsx.h

	* main/gauges.c: always show bomb count if player has them,
	bombs may be the selected secondary weapon but the right view can
	be a camera view (http://dxx-rebirth.de/smf/index.php?topic=58.0)

2006-07-27  Chris Taylor  <chris@icculus.org>

	* main/inferno.c, main/multi.c, main/multi.h:
	move hoard data saving from main to save_hoard_data

2006-07-24  Chris Taylor  <chris@icculus.org>

	* main/state.c: make the thumbnail properly when doing fast save
	in d2xgl
