@@ -1,3 +1,7 @@
+2007-01-30  Bradley Bell  <btb@icculus.org>
+
+	* configure.ac, iff/iff.c: amd64 fixes
+
 2006-12-16  Chris Taylor  <chris@icculus.org>
 
 	* arch/carbon/conf.h: allow universal binaries to be built using
